@startuml

title __CONTROLLERS's Class Diagram__\n

  package umcarro.Controllers {
    class Clientes {
        - clientes : HashMap<Integer, Cliente>
        + Clientes()
        + getClienteByUser()
        + Clientes()
        + addCliente()
        + getClienteByNif()
        + addRating()
        + getClientes()
        + setClientes()
    }
  }
  

  package umcarro.Controllers {
    class DataBaseSaver {
        + DataBaseSaver()
        + loadData()
        + saveData()
    }
  }
  

  package umcarro.Controllers {
    class Main {
        {static} + main()
    }
  }
  

  package umcarro.Controllers {
    class Pedidos {
        - pedidos : ArrayList<Pedido>
        - pedidosCounter : Integer
        + Pedidos()
        + getPedidos()
        + getPedidosDeCliente()
        + getPedidosDeProp()
        + addNewPedido()
        + selectPedidoById()
        + removePedido()
        + getPedidosPorClassificarDeCliente()
        + setPedidos()
        + getPedidosCounter()
        + setPedidosCounter()
        + toString()
    }
  }
  

  package umcarro.Controllers {
    class Proprietarios {
        - proprietarios : HashMap<Integer, Proprietario>
        + setProprietarios()
        + Proprietarios()
        + getProprietariosByUser()
        + addRatingToProp()
        + getProprietarios()
        + Proprietarios()
        + addProprietario()
        + getProprietarioByNif()
    }
  }
  

  package umcarro.Controllers {
    class UMCarro {
        + UMCarro()
        + DataDump()
        ~ login()
        + registo()
        - menuCliente()
        - menuAluguer()
        + confirmationVehicle()
        - menuProprietario()
        - pedidosManager()
        - precoViagem()
        - getTravelDist()
        - UserRatingManager()
        - addCarro()
        + getView()
        + getCliente()
        + setCliente()
        + getProprietario()
        + setProprietario()
        + getClientes()
        + setClientes()
        + getProprietarios()
        + setProprietarios()
        + getVeiculos()
        + setVeiculos()
        + getPedidos()
        + setPedidos()
        + setView()
        + getDb()
        + setDb()
    }
  }
  

  package umcarro.Controllers {
    class Veiculos {
        - veiculos : ArrayList<Veiculo>
        + getVeiculoByMatricula()
        + Veiculos()
        + Veiculos()
        + getVeiculos()
        + setVeiculos()
        + addVeiculo()
        + getVeiculosDeProprietário()
        + getVeiculoByProprietario()
        + veiculoComAutonomiaDesejada()
        + veiculoAlcancavel()
        + distanciaEntrePontos()
        + veiculosCapazesDeRealizarViagem()
        + veiculosByCombustivel()
        + veiculoMaisProximo()
        + veiculoMaisBarato()
        + toString()
        + selectVeiculoAutonomia()
        + selectVeiculoEspecifico()
        + selectMatricula()
        + selectMaisBaratoAlcancavel()
        + selectMaisBarato()
        + selectMaisProximo()
        + addRatingVeiculo()
    }
  }
  

  UMCarro -up-|> Serializable
  UMCarro o-- Cliente : cliente
  UMCarro o-- Proprietario : proprietario
  UMCarro o-- Clientes : clientes
  UMCarro o-- Proprietarios : proprietarios
  UMCarro o-- Veiculos : veiculos
  UMCarro o-- Pedidos : pedidos
  UMCarro o-- View : view
  UMCarro o-- DataBaseSaver : db


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
